[workspace]
members = ["native_client", "webrtc_server", "native_shared", "wasm_client", "signaling_shared"]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls-vendored"] }
futures-util = "0.3"
futures = "0.3"
