[package]
name = "datachannel-socket"
version = "0.1.1"
authors = ["Srayan Jana <srayan.jana@outlook.com>"]
description = "Cross-Platform WebRTC Datachannels for Client-Server apps."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ValorZard/datachannel-socket-rs"
readme = "README.md"
keywords = ["webrtc"]
categories = ["web-programming", "network-programming"]
edition = "2024"

[workspace]
members = ["native_peer", "wasm_client", "common"]
resolver = "3"
exclude = ["examples/*"]

[workspace.dependencies]
# Internal crates
native_peer = {path = "./native_peer/"}
common = {path = "./common/"}

# dependencies
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls-vendored"] }
futures-util = "0.3"
futures = "0.3"

[dependencies]
native_peer = { workspace = true }
common = {workspace = true}

[dev-dependencies]
anyhow = {workspace = true}
clap = { version = "4", features = ["derive"] }
tokio = {workspace = true}