[package]
name = "datachannel-socket"
version = "0.2.0"
authors = ["Srayan Jana <srayan.jana@outlook.com>"]
description = "Cross-Platform WebRTC Datachannels for Client-Server apps."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ValorZard/datachannel-socket-rs"
readme = "README.md"
keywords = ["webrtc"]
categories = ["web-programming", "network-programming"]
edition = "2024"

[workspace]
members = ["native_peer", "wasm_peer", "common"]
resolver = "3"
exclude = ["examples/*"]

[workspace.dependencies]
# Internal crates
datachannel_socket_native_peer = {path = "./native_peer/"}
datachannel_socket_common = {path = "./common/"}
datachannel_socket_wasm_peer = {path = "./wasm_peer/"}

# dependencies
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls-vendored"] }
futures-util = "0.3"
futures = "0.3"

# wasm dependencies
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
ws_stream_wasm = "0.7.5"
gloo-timers = { version = "0.4", features = ["futures"] }

[dependencies]
datachannel_socket_common = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
datachannel_socket_native_peer = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
datachannel_socket_wasm_peer = { workspace = true }

[dev-dependencies]
anyhow = {workspace = true}
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = {workspace = true}
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = {workspace = true}
wasm-bindgen = {workspace = true}
wasm-bindgen-futures = {workspace = true}
web-sys = {workspace = true}
gloo-timers = { workspace = true}