[package]
name = "native_client"
version = "0.1.0"
edition = "2024"

[dependencies]
native_shared = {path = "../native_shared/"}
anyhow = {workspace = true}
clap = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tokio-tungstenite = {workspace = true}
futures-util = {workspace = true}