[package]
name = "datachannel_socket_native_peer"
version = "0.1.0"
edition = "2024"

[dependencies]
datachannel_socket_common = {path = "../common/"}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true, features = ["net"]}
str0m = "0.20"
futures-util = {workspace = true}
tokio-tungstenite = {workspace = true}