[package]
name = "datachannel_socket_native_peer"
version = "0.1.0"
edition = "2024"
description = "Native peer for datachannel-socket"
license = "MIT OR Apache-2.0"

[dependencies]
datachannel_socket_common = {path = "../common/", version = "0.1.0"}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true, features = ["net"]}
str0m = "0.20"
futures-util = {workspace = true}
futures = {workspace = true}
tokio-tungstenite = {workspace = true}

[dev-dependencies]
anyhow = {workspace = true}
clap = { version = "4", features = ["derive"] }
tokio = {workspace = true}
console-subscriber = "0.5.0"