[package]
name = "native_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
signaling_shared = {path = "../signaling_shared/"}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true, features = ["net"]}
str0m = "0.20"
futures-util = {workspace = true}
tokio-tungstenite = {workspace = true}