[package]
name = "wasm_peer"
version = "0.1.0"
edition = "2024"

[dependencies]
common = {path = "../common/"}
anyhow = {workspace = true}
console_error_panic_hook = {workspace = true}
js-sys = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
wasm-bindgen = {workspace = true}
wasm-bindgen-futures = {workspace = true}
ws_stream_wasm = {workspace = true}
futures-util = {workspace = true}
gloo-timers = {workspace = true}

[dependencies.web-sys]
workspace = true
features = [
  "console",
  "BinaryType",
  "Blob",
  "Event",
  "MessageEvent",
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelInit",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcIceServer",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcSessionDescription",
    "Document", "Element", "HtmlElement", "Node", "Window",
    "HtmlInputElement","HtmlButtonElement"
]
