[package]
name = "datachannel_socket_wasm_peer"
version = "0.1.0"
edition = "2024"
description = "WASM peer for datachannel-socket"
license = "MIT OR Apache-2.0"

[dependencies]
datachannel_socket_common = {path = "../common/", version = "0.1.0"}
anyhow = {workspace = true}
console_error_panic_hook = {workspace = true}
js-sys = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
wasm-bindgen = {workspace = true}
wasm-bindgen-futures = {workspace = true}
ws_stream_wasm = {workspace = true}
futures-util = {workspace = true}
futures = {workspace = true}
gloo-timers = {workspace = true}

[dependencies.web-sys]
workspace = true
features = [
  "console",
  "BinaryType",
  "Blob",
  "Event",
  "MessageEvent",
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelInit",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcIceServer",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcSessionDescription",
    "Document", "Element", "HtmlElement", "Node", "Window",
    "HtmlInputElement","HtmlButtonElement"
]


[dev-dependencies]
anyhow = {workspace = true}
console_error_panic_hook = {workspace = true}
wasm-bindgen = {workspace = true}
wasm-bindgen-futures = {workspace = true}
web-sys = {workspace = true}
gloo-timers = { workspace = true}